[package]
name = "rapax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.3.3"
bytemuck = "1.13.1"
glow = "0.13.1"

[dev-dependencies]
glutin = "0.29"
cgmath = "0.18.0"
image = "0.24.6"
cosmic-text = "0.10.0"
clipboard = "0.5.0"
